GNOME Bugzilla – Bug 658739
Session restore in WebApp mode
Last modified: 2011-09-11 13:54:41 UTC
When an instance in app mode crashes and is launched again we get: - The web app loading in one tab. - Another tab with the session restore infobar. I think we should neither have tabs nor session restore at all. Getting rid of the restore stuff for web app mode will also get rid of the new tab as a side effect.
Fixed in master 7644b0abc2fdc294d09f95584c835abbdbb96fd1.